# agent-guard

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/agent_guard/: __init__.py  cli.py  core.py
tests/: test_core.py
